Created functions that display library, add new books to library via a form, and delete item from library. Currently stuck with the toggle weather the book has been read or not from within the library

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     
+    <div class="library">
 
-<script type="text" src="app.js"></script>
+    </div>
+
+    <form>
+        <input type="text" id="input-title" name="title" placeholder="Book title" required>
+        <input type="text" id="input-author" name="author" placeholder="Author's name" required>
+        <input type="number" id="input-pages" name="pages" placeholder="How many pages?" required>
+        <label for="read">Have you read it?</label>
+        <input type="checkbox" id="input-read" name="read">
+        <button type="button" id="addBtn">Add New Book</button>
+    </form>
+
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
